# ver_malhaIR

./: .gitignore  pyproject.toml  requirements.txt
ver_malhair/: PROCESSAMENTOS.csv  __init__.py
