[tool.poetry]
name = "ver-malhair"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "ver_malhair"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.1"
selenium = "^4.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
